Attempt to fix font size of index.html heading on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@ h1 {
     text-align: center;
     color: chartreuse;
     font-family: 'Codystar', cursive;
-    font-size: 75%;
+    font-size: 2rem;
 }
 
 .voidtitle	{ animation-name: title_fx;
